kouhai/tests/cases/error/bitwise_on_float.kou
fn main():
    let x: Double = 1.0
    let y: Double = 2.0
    let z: Double = x & y
